--- a/index.html
+++ b/index.html
@@ -26,18 +26,19 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <div class="page-header">
           <h1>About Me</h1>
         </div>
         <div>
-          <img src="Profile Pic.jpg" alt="Tony Kuang" class="img-thumbnail img-fluid">
+          <img src="Profile Pic.jpg" alt="Tony Kuang" class="img-thumbnail img-fluid img-responsive">
           <p>My name is Tony Kuang. I am from China. People ask me if I have a Chinese name. Of course I do! My Chinese name is Jianze Kuang. People always have hard time prouncing my Chinese name. So I usually go by Tony. Tony has been with me since I was born. My mom gave that name to me. She said she just liked the name!</p>
           <p>I have been in the U.S. for more than 5 years. I went to KU, finished my undergraduate degree in Finance, and got a financial analyst job in Topeka. I really want to get into coding because I want to work in IT and eventually build my own startup. Even if in finance, programming is becomming more and more important because of the integration of financial data and database.</p>
           <p>I am a musician and an athlete. I am also a traveler and an adventuers:)</p>
         </div>
       </div>
-      <div class="col-md-3">
+
+      <div class="col-md-4">
         <div class="page-header">
           <h2>Connect with Me</h2>
         </div>
@@ -52,7 +53,7 @@
 
   <footer>
       <div class="row">
-        <div class="col-md-12">
+        <div class="footer navbar-fixed-bottom">
           Copyright &copy; 2017 Tony Kuang    
         </div>
       </div>
