--- a/portfolio.html
+++ b/portfolio.html
@@ -5,71 +5,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Tony Kuang</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Tony Kuang</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+  <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a class="navbar-brand" id="brand" href="index.html">Tony Kuang</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="page-header">
+          <h1>Portfolio</h1>
+        </div>
+          <div class="work">
+            <img class="img" src="Hopetoun_falls.jpg" alt="nature">
+            <h3>Nature</h3>
+          </div>
+          <div class="work">
+            <img class="img" src="planets.jpg" alt="planets">
+            <h3>Planets</h3>
+          </div>
+          <div class="work">
+            <img class="img" src="michael-phelps.jpg" alt="sports">
+            <h3>Sports</h3>
+          </div>
+          <div class="work">
+            <img class="img" src="music.jpg" alt="music">
+            <h3>Music</h3>
+          </div>
+          <div class="work">
+            <img class="img" src="tesla-model-x-5.jpg" alt="technology">
+            <h3>Technology</h3>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="page-header">
+          <h2>Connect with Me</h2>
+        </div>
+        <div>
+          <a href="https://github.com/tonyjkuang"><img src="Github.png" class="social img-fluid" alt="GitHub" /></a>
+          <a href="https://www.linkedin.com/in/tonyjkuang/"><img src="LinkedIn.png" class="social img-fluid" alt="LinkedIn" /></a>
+          <a href="https://www.facebook.com/jianze.kuang"><img src="Facebook.ico" class="social img-fluid" alt="Facebook" /></a>
+        </div> 
+      </div>
     </div>
-  </header>
-
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
-
-      <div class="work">
-        <img src="assets/images/Hopetoun_falls.jpg" alt="nature">
-
-        <h3>Nature</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/planets.jpg" alt="planets">
-
-        <h3>Planets</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/michael-phelps.jpg" alt="sports">
-
-        <h3>Sports</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/music.jpg" alt="music">
-
-        <h3>Music</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/tesla-model-x-5.jpg" alt="technology">
-
-        <h3>Technology</h3>
-      </div>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/tonyjkuang"><img src="assets/images/Github.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/tonyjkuang/"><img src="assets/images/LinkedIn.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://www.facebook.com/jianze.kuang"><img src="assets/images/Facebook.ico" class="social" alt="Facebook" /></a>
-      </div>
-    </section>
   </div>
 
   <footer>
-    <div class="container">
-      Copyright &copy; 2017 Tony Kuang
-    </div>
+      <div class="row">
+        <div class="footer navbar-fixed-bottom">
+          Copyright &copy; 2017 Tony Kuang    
+        </div>
+      </div>
   </footer>
+  
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
